force-app/main/default/objects/Necesidades__c/Necesidades__c.object-meta.xml
<CustomObject>
    <label>Necesidades</label>
    <nameField>
        <label>Nombre de Necesidades</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Necesidades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>