force-app/main/default/objects/Necesidades__c/fields/Linea_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_negocio__c</fullName>
    <label>Línea de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ambiental</fullName>
            </value>
            <value>
                <fullName>Hidrosanitario</fullName>
            </value>
            <value>
                <fullName>Higiene</fullName>
            </value>
            <value>
                <fullName>Retardante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>