force-app/main/default/objects/Necesidades__c/fields/Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Prospecto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospecto</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Necesidades</relationshipLabel>
    <relationshipName>Necesidades</relationshipName>
    <type>Lookup</type>
</CustomField>