force-app/main/default/objects/Necesidades__c/fields/Sublinea_de_negocio__c.field-meta.xml
<CustomField>
    <fullName>Sublinea_de_negocio__c</fullName>
    <label>Sublínea de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BIOENZIMÁTICO</fullName>
            </value>
            <value>
                <fullName>GRASAS</fullName>
            </value>
            <value>
                <fullName>INTIMA</fullName>
            </value>
            <value>
                <fullName>AROMATIZANTES</fullName>
            </value>
            <value>
                <fullName>RETENCIO SOLIDOS</fullName>
            </value>
            <value>
                <fullName>SONDEO/DESAZOLVE MECANICO</fullName>
            </value>
            <value>
                <fullName>SONDEO/DESAZOLVE VACTOR</fullName>
            </value>
            <value>
                <fullName>PLOMERIA</fullName>
            </value>
            <value>
                <fullName>OBRA CIVIL</fullName>
            </value>
            <value>
                <fullName>LIMPIEZA</fullName>
            </value>
            <value>
                <fullName>ELCLA</fullName>
            </value>
            <value>
                <fullName>EVITER</fullName>
            </value>
            <value>
                <fullName>RET. TEXTIL</fullName>
            </value>
            <value>
                <fullName>RET MADERA</fullName>
            </value>
            <value>
                <fullName>RET. PALAPA</fullName>
            </value>
            <value>
                <fullName>APLIC.RETARDANTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>