force-app/main/default/objects/Necesidades__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Ambos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>