force-app/main/default/objects/Necesidades__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prospecto__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Contacto__c</columns>
    <columns>Linea_de_negocio__c</columns>
    <columns>Sublinea_de_negocio__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>